tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_modulo/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion is always false: attempt to calculate the remainder with a divisor of zero
  ┌─ src/main.nr:5:15
  │
5 │     let res = (a * b) % c;
  │               ----------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1: main
            at src/main.nr:5:15

Aborting due to 1 previous error
