tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_modulo/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to calculate the remainder with a divisor of zero
  ┌─ src/main.nr:5:15
  │
5 │     let res = (a * b) % c;
  │               -----------
  │
  = Call stack:
    1. src/main.nr:5:15

Failed assertion
