tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_modulo/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to calculate the remainder with a divisor of zero
  ┌─ src/main.nr:5:15
  │
5 │     let res = (a * b) % c;
  │               -----------
  │

Error interpreting main function
