tooling/nargo_cli/tests/snapshots/execution_failure/div_by_zero_modulo/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
bug: Assertion is always false
  ┌─ src/main.nr:5:15
  │
5 │     let res = (a * b) % c;
  │               ----------- As a result, the compiled circuit is ensured to fail. Other assertions may also fail during execution
  │
  = Call stack:
    1. src/main.nr:5:15

error: Failed constraint
  ┌─ src/main.nr:5:15
  │
5 │     let res = (a * b) % c;
  │               -----------
  │
  = Call stack:
    1. src/main.nr:5:15

Failed to solve program: 'Cannot satisfy constraint'
